--- a/src/index.html
+++ b/src/index.html
@@ -5,44 +5,44 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
     <title>Seller Dashboard | Coastline</title>
-    <!-- CSS Libraries -->
+
+    <!-- Imported CSS -->
+    <link rel="stylesheet" href="lib/metisMenu.min.css">    
     <link rel="stylesheet" href="lib/bootstrap.min.css">
-    <!-- From Template -->
-    <!-- <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.3.0/vis.css"> -->
     <link rel="stylesheet" type="text/css" href="lib/vis.min.css">
-    <link href="lib/metisMenu.min.css" rel="stylesheet">
-    <!-- <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,500,700' rel='stylesheet' type='text/css'> -->
-    <!-- <link href="lib/morris.css" rel="stylesheet"> -->
-    <!-- <link href="lib/font-awesome.min.css" rel="stylesheet" type="text/css"> -->
-    <!--<script src="https://use.fonticons.com/120696ca.js"></script>-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/styles.css">
+
+    <!-- Imported JS -->
     <script src="lib/jquery.min.js"></script>
     <script src="lib/bootstrap.min.js"></script>
-
     <script src="lib/metisMenu.min.js"></script>
     <script src="lib/raphael-min.js"></script>
-    <!-- // <script src="lib/morris.min.js"></script> -->
-    <!-- // <script src="lib/morris-data.js"></script> -->
     <script src="lib/jquery.dataTables.min.js"></script>
     <script src="lib/dataTables.bootstrap.min.js"></script>
     <script src="lib/sb-admin-2.js"></script>
-    <!-- JS Libraries -->
     <script src="lib/angular.min.js"></script>
     <script src="lib/ui-bootstrap.min.js"></script>
-
     <script src="lib/angular-ui-router.js"></script>
     <script src="lib/ngStorage.js"></script>
     <script src="lib/loading-bar.js"></script>
     <script src="lib/angucomplete-alt.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.3.0/vis.js"></script> -->
     <script src="lib/vis.min.js"></script>
-    <!-- Custom CSS -->
-    <!-- <link rel="stylesheet" href="css/dashboard-styles.css" type="text/css"> -->
-    <!-- <link rel="stylesheet" href="css/login-styles.css" type="text/css"> -->
-    <!-- <link href="css/timeline.css" rel="stylesheet"> -->
-    <!-- <link href="css/sb-admin-2.css" rel="stylesheet"> -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <!-- AngularJS Code -->
+    <script src="lib/moment.min.js"></script>
+    <script src="lib/locales.min.js"></script>
+    
+    <!-- Custom JS -->
     <script src="js/app.js"></script>
     <script src="js/auth/controllers.js"></script>
     <script src="js/auth/services.js"></script>
@@ -56,32 +56,20 @@
     <script src="js/track-inventory/controllers.js"></script>
     <script src="js/track-inventory/services.js"></script>
     <script src="js/track-inventory/directives.js"></script>
-    <script src="lib/moment.min.js"></script>
-    <script src="lib/locales.min.js"></script>
-    <link href="css/styles.css" rel="stylesheet">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
+
 </head>
 
 <body ng-app="coastlineWebApp">
     <div>
-        <!-- <div ng-controller="dashboardCtrl"> -->
-        <!--  <div ng-controller="authCtrl">-->
         <div class="container-fluid">
             <div class="row">
-                <div ui-view="nav-top">
-                </div>
-                <div ui-view="body">
-                </div>
-                <div ui-view="nav-side">
-                </div>
+                <div ui-view="nav-top"></div>
+                <div ui-view="body"></div>
+                <div ui-view="nav-side"></div>
             </div>
         </div>
     </div>
 </body>
+
 
 </html>
