refactored file structure and routing

--- a/src/index.html
+++ b/src/index.html
@@ -63,9 +63,7 @@
     <div>
         <div class="container-fluid">
             <div class="row">
-                <div ui-view="nav-top"></div>
-                <div ui-view="body"></div>
-                <div ui-view="nav-side"></div>
+                <div ui-view></div>
             </div>
         </div>
     </div>
