sales management tab

--- a/src/index.html
+++ b/src/index.html
@@ -67,8 +67,8 @@
     <script src="js/sales-management/services.js"></script>
     
     <script src="js/supply-chain/controllers.js"></script>
-    <script src="js/supply-chain/services.js"></script>
-    <script src="js/supply-chain/directives.js"></script>
+    <!--<script src="js/supply-chain/services.js"></script>-->
+    <!--<script src="js/supply-chain/directives.js"></script>-->
 
     <script src="js/inventory/controllers.js"></script>
     <script src="js/inventory/services.js"></script>
