SEO (Robert codes pt.2)

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     <![endif]-->
 
     <title>Seller Dashboard | Coastline</title>
+    <meta name="description" content="Sell fish directly to customers with Coastline.">
 
     <!-- Imported CSS -->
     <link rel="stylesheet" href="lib/metisMenu.min.css">
