--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,7 @@
     <script src="lib/vis.min.js"></script>
     <script src="lib/moment.min.js"></script>
     <script src="lib/locales.min.js"></script>
+    <script src="lib/ng-file-model.js"></script>
 
     <!-- Custom JS -->
     <script src="js/app.js"></script>
