--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,8 @@
     <script src="lib/moment.min.js"></script>
     <script src="lib/locales.min.js"></script>
     <script src="lib/ng-file-model.js"></script>
-
+    <script src="lib/ng-file-upload-shim.min.js"></script>
+    <script src="lib/ng-file-upload.min.js"></script>
     <!-- Custom JS -->
     <script src="js/app.js"></script>
 
