--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,8 @@
     <script src="lib/jquery.dataTables.min.js"></script>
     <script src="lib/dataTables.bootstrap.min.js"></script>
     <script src="lib/sb-admin-2.js"></script>
-    <script src="lib/angular.min.js"></script>
+    <!-- <script src="lib/angular.min.js"></script> -->
+    <script src="https://code.angularjs.org/1.5.2/angular.min.js"></script>
     <script src="lib/ui-bootstrap.min.js"></script>
     <script src="lib/angular-ui-router.js"></script>
     <script src="lib/ngStorage.js"></script>
