--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="lib/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="lib/vis.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-
+    <link rel="stylesheet" href="lib/ng-notify.min.css"></link>
     <!-- Custom CSS -->
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link rel="icon" type="image/ico" href="favicon.ico"/>
@@ -41,7 +41,6 @@
     <script src="lib/jquery.dataTables.min.js"></script>
     <script src="lib/dataTables.bootstrap.min.js"></script>
     <script src="lib/sb-admin-2.js"></script>
-    <!-- <script src="lib/angular.min.js"></script> -->
     <script src="https://code.angularjs.org/1.5.2/angular.min.js"></script>
     <script src="lib/ui-bootstrap.min.js"></script>
     <script src="lib/angular-ui-router.js"></script>
@@ -54,6 +53,8 @@
     <script src="lib/ng-file-model.js"></script>
     <script src="lib/ng-file-upload-shim.min.js"></script>
     <script src="lib/ng-file-upload.min.js"></script>
+    <script src="lib/ng-notify.min.js"></script>
+
     <!-- Custom JS -->
     <script src="js/app.js"></script>
 
