Rename supply chain

--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,9 @@
     <script src="js/auth/controllers.js"></script>
     <script src="js/auth/services.js"></script>
 
+    <script src="js/settings/controllers.js"></script>
+    <script src="js/settings/services.js"></script>
+
     <script src="js/common/controllers.js"></script>
     <script src="js/common/directives.js"></script>
     <script src="js/common/services.js"></script>
