--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,6 @@
     <meta name="description" content="Sell fish directly to customers with Coastline.">
 
     <!-- Imported CSS -->
-    <link rel="stylesheet" href="lib/metisMenu.min.css">
     <link rel="stylesheet" href="lib/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="lib/vis.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -34,19 +33,10 @@
     <link rel="stylesheet" href="css/styles.css">
 
     <!-- Imported JS -->
-    <script src="lib/jquery.min.js"></script>
-    <script src="lib/bootstrap.min.js"></script>
-    <script src="lib/metisMenu.min.js"></script>
-    <script src="lib/raphael-min.js"></script>
-    <script src="lib/jquery.dataTables.min.js"></script>
-    <script src="lib/dataTables.bootstrap.min.js"></script>
-    <script src="lib/sb-admin-2.js"></script>
     <script src="https://code.angularjs.org/1.5.2/angular.min.js"></script>
     <script src="lib/ui-bootstrap.min.js"></script>
     <script src="lib/angular-ui-router.js"></script>
     <script src="lib/ngStorage.js"></script>
-    <script src="lib/loading-bar.js"></script>
-    <script src="lib/angucomplete-alt.js"></script>
     <script src="lib/vis.min.js"></script>
     <script src="lib/moment.min.js"></script>
     <script src="lib/locales.min.js"></script>
@@ -93,6 +83,9 @@
 
     <script src="js/orders/controllers.js"></script>
     <script src="js/orders/services.js"></script>
+
+    <script src="js/customers/controllers.js"></script>
+    <script src="js/customers/services.js"></script>
 
 </head>
 
