Fix product display

--- a/src/index.html
+++ b/src/index.html
@@ -21,26 +21,18 @@
   <meta name="description" content="Sell fish directly to customers with Coastline.">
 
   <!-- Imported CSS -->
-  <link rel="stylesheet" href="lib/metisMenu.min.css">
   <link rel="stylesheet" href="lib/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="lib/vis.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/styles.css">
 
   <!-- Imported JS -->
-  <script src="lib/jquery.min.js"></script>
-  <script src="lib/bootstrap.min.js"></script>
-  <script src="lib/metisMenu.min.js"></script>
-  <script src="lib/raphael-min.js"></script>
-  <script src="lib/jquery.dataTables.min.js"></script>
-  <script src="lib/dataTables.bootstrap.min.js"></script>
-  <script src="lib/sb-admin-2.js"></script>
+  <!-- <script src="lib/bootstrap.min.js"></script> -->
+  <!-- <script src="lib/dataTables.bootstrap.min.js"></script> -->
   <script src="https://code.angularjs.org/1.5.2/angular.min.js"></script>
   <script src="lib/ui-bootstrap.min.js"></script>
   <script src="lib/angular-ui-router.js"></script>
   <script src="lib/ngStorage.js"></script>
-  <script src="lib/loading-bar.js"></script>
-  <script src="lib/angucomplete-alt.js"></script>
   <script src="lib/vis.min.js"></script>
   <script src="lib/moment.min.js"></script>
   <script src="lib/locales.min.js"></script>
