--- a/src/index.html
+++ b/src/index.html
@@ -70,8 +70,8 @@
   <script src="js/products/controllers.js"></script>
   <script src="js/products/services.js"></script>
 
-  <script src="js/sales-management/controllers.js"></script>
-  <script src="js/sales-management/services.js"></script>
+  <script src="js/ecommerce/controllers.js"></script>
+  <script src="js/ecommerce/services.js"></script>
 
   <script src="js/supply-chain/controllers.js"></script>
   <!--<script src="js/supply-chain/services.js"></script>-->
