--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,8 @@
   <script src="lib/ng-file-upload-shim.min.js"></script>
   <script src="lib/ng-file-upload.min.js"></script>
   <script src="lib/ng-notify.min.js"></script>
+  <script src="lib/Chart.js"></script>
+  <script src="lib/angular-chart.min.js"></script>
 
   <!-- Custom JS -->
   <script src="js/app.js"></script>
